--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ MANIFEST
 *.txt
 *.json
 
+# bash script
+*.sh
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
